fixed color, line spacing, button order and text content

--- a/src/features/map/routeDirection/routeDirection.scss
+++ b/src/features/map/routeDirection/routeDirection.scss
@@ -55,6 +55,10 @@
     margin-right: auto;
     width: 90%;
     display: inline;
+    
+    .Polaris-Icon {
+      fill: #005DAA;
+    }
 
   }
 }
